--- a/src/components/shared-header/profile-nav/profile-nav.scss
+++ b/src/components/shared-header/profile-nav/profile-nav.scss
@@ -10,7 +10,7 @@
   max-height: 100vh;
   overflow-y: scroll;
   position: fixed;
-  top: 48.25px;
+  top: 48px;
   width: 100vw;
   z-index: 2;
 
